<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/rick_and_morty"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingMedium">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="contentDescription"
                android:src="@drawable/ic_anonymous_128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCharacterName"
                style="@style/MediumTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="contentDescription"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/tvCharacterName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

            <TextView
                android:id="@+id/tvCharacterStatus"
                style="@style/SmallTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="contentDescription"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/tvCharacterStatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterName" />

            <TextView
                android:id="@+id/tvSpecies"
                style="@style/SmallTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="contentDescription"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/tvSpecies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterStatus" />

            <TextView
                android:id="@+id/tvGender"
                style="@style/SmallTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="contentDescription"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/tvGender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSpecies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</merge>